# agentic-devops-copilot

./: .env.example  Makefile  README.md  pyproject.toml
copilot/: __init__.py  cli.py  deps.py  graph.py  llm.py  providers.py  sandbox.py  server.py  settings_store.py  state.py
copilot/aws/: adapters.py  mcp.py  session.py
copilot/nodes/: aws_investigator.py  cloudwatch_logs.py  code_executor.py  critic.py  github_diff.py  metrics.py  planner.py  rag.py  synthesizer.py
copilot/runbooks/: 5xx-spike.md  high-cpu-ecs.md
demo/: README.md  copilot-readonly-policy.json  deploy.sh  ecs-demo.yaml  teardown.sh
docs/: architecture.md  cli.md  providers.md  security.md  setup.md  usage.md  web-ui.md
tests/: conftest.py  test_graph_smoke.py  test_server_api.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx
web/src/components/: chat.tsx  model-picker.tsx  settings-dialog.tsx
web/src/components/ui/: chat-message.tsx  chat.tsx  markdown-renderer.tsx
web/src/lib/: api.ts  types.ts
web/src/routes/: home.tsx
