[project]
name = "aws-devops-copilot"
version = "0.1.0"
description = "Agentic AWS DevOps copilot — investigates incidents across logs, metrics, deploys and runbooks."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "boto3>=1.34.0",
    "pydantic>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
github = ["PyGithub>=2.3.0"]
# Paid OpenAI API and local OpenAI-compatible servers (Ollama / LM Studio / vLLM)
# all speak the OpenAI protocol, so they share one client.
openai = ["langchain-openai>=0.2.0"]
local = ["langchain-openai>=0.2.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
copilot = "copilot.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["copilot*"]
